# horriblegraphics

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy_docs.yml
src/horriblegraphics/: __init__.py
tests/: test_hello.py
